Bug 777511 - #define nullptr __null for gcc <= 4.5. r=ehsan